* fix the info icon vertical alignment

--- a/client/components/domains/domain-search-results/style.scss
+++ b/client/components/domains/domain-search-results/style.scss
@@ -67,9 +67,10 @@ body.is-section-signup.is-white-signup {
 .domain-search-results__domain-available-notice {
 	display: flex;
 	.domain-search-results__domain-available-notice-icon {
-		margin-top: 2px;
 		margin-right: 8px;
 		svg {
+			display: block;
+			margin: 0 auto;
 			fill: var( --color-neutral-20 );
 			width: 20px;
 			height: 20px;
